[gd_scene load_steps=9 format=3 uid="uid://ctvg3e2tkspqb"]

[ext_resource type="Script" path="res://addons/godot-idea-board/sekkei_main.gd" id="1_2n0ft"]
[ext_resource type="Theme" uid="uid://dp1xxx710usj3" path="res://addons/godot-idea-board/main_theme.tres" id="1_eha6v"]
[ext_resource type="Script" path="res://addons/godot-idea-board/sekkei_graph.gd" id="1_lrq46"]
[ext_resource type="ButtonGroup" uid="uid://b8qct4jrxfu76" path="res://addons/godot-idea-board/left_right_button_group.tres" id="2_wtk48"]
[ext_resource type="Script" path="res://addons/godot-idea-board/context_menu/graph_menu.gd" id="5_extsy"]

[sub_resource type="Animation" id="Animation_w05kn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gi5j8"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.686275, 0.905882, 0.905882, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jn6kl"]
_data = {
"RESET": SubResource("Animation_w05kn"),
"blink": SubResource("Animation_gi5j8")
}

[node name="SekkeiMain" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_eha6v")
script = ExtResource("1_2n0ft")

[node name="SidebarVBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="SidebarVBoxContainer"]
layout_mode = 2

[node name="WindowButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Open Floating Window"
toggle_mode = true
icon_alignment = 1

[node name="SplitButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Toggle H Split View"
toggle_mode = true
icon_alignment = 1

[node name="LeftButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select Left(H Split)"
disabled = true
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_wtk48")
icon_alignment = 1

[node name="RightButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select Right(H Split)"
disabled = true
toggle_mode = true
button_group = ExtResource("2_wtk48")
icon_alignment = 1

[node name="ReloadButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Reload items"
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SidebarVBoxContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Add new layout"
icon_alignment = 1

[node name="DuplicateButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Duplicate selected layout"
icon_alignment = 1

[node name="RenameButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "rename selected layout"
icon_alignment = 1

[node name="RemoveButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "remove selected layout"
icon_alignment = 1

[node name="SavedItemList" type="ItemList" parent="SidebarVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="SidebarVBoxContainer"]
layout_mode = 2

[node name="MainPathEditButton" type="Button" parent="SidebarVBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "change layout directory path"
toggle_mode = true
icon_alignment = 1

[node name="MainPathLineEdit" type="LineEdit" parent="SidebarVBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "change layout directory path"
mouse_filter = 2
editable = false
virtual_keyboard_enabled = false

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="NoDataReferenceRect" type="ReferenceRect" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
border_width = 2.0

[node name="SekkeiGraph1" type="GraphEdit" parent="HSplitContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/activity = Color(1, 0, 0, 1)
snapping_distance = 24
zoom_min = 0.1
zoom_max = 3.0
show_zoom_label = true
show_arrange_button = false
script = ExtResource("1_lrq46")

[node name="ContextMenu" type="PopupMenu" parent="HSplitContainer/SekkeiGraph1"]
script = ExtResource("5_extsy")

[node name="DragPath" type="Line2D" parent="HSplitContainer/SekkeiGraph1"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="HSplitContainer/SekkeiGraph1/DragPath"]
libraries = {
"": SubResource("AnimationLibrary_jn6kl")
}

[node name="SekkeiGraph2" type="GraphEdit" parent="HSplitContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
snapping_distance = 24
zoom_min = 0.1
zoom_max = 3.0
show_arrange_button = false
script = ExtResource("1_lrq46")

[node name="ContextMenu" type="PopupMenu" parent="HSplitContainer/SekkeiGraph2"]
script = ExtResource("5_extsy")

[node name="DragPath" type="Line2D" parent="HSplitContainer/SekkeiGraph2"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="HSplitContainer/SekkeiGraph2/DragPath"]
libraries = {
"": SubResource("AnimationLibrary_jn6kl")
}

[node name="FileNameDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(297, 115)

[node name="FileNameMarginContainer" type="MarginContainer" parent="FileNameDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 289.0
offset_bottom = 66.0

[node name="FileNameVBoxContainer" type="VBoxContainer" parent="FileNameDialog/FileNameMarginContainer"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="FileNameHBoxContainer" type="HBoxContainer" parent="FileNameDialog/FileNameMarginContainer/FileNameVBoxContainer"]
layout_mode = 2

[node name="FileNameLineEdit" type="LineEdit" parent="FileNameDialog/FileNameMarginContainer/FileNameVBoxContainer/FileNameHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="FileNameLabel" type="Label" parent="FileNameDialog/FileNameMarginContainer/FileNameVBoxContainer/FileNameHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ".json"

[node name="FileNameMessageLabel" type="Label" parent="FileNameDialog/FileNameMarginContainer/FileNameVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.827451, 0.47451, 1)

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Window" type="Window" parent="."]
visible = false
wrap_controls = true
always_on_top = true

[node name="SekkeiGraph3" type="GraphEdit" parent="Window"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/activity = Color(1, 0, 0, 1)
snapping_distance = 24
zoom_min = 0.1
zoom_max = 3.0
show_zoom_label = true
show_arrange_button = false
script = ExtResource("1_lrq46")

[node name="ContextMenu" type="PopupMenu" parent="Window/SekkeiGraph3"]
script = ExtResource("5_extsy")

[node name="DragPath" type="Line2D" parent="Window/SekkeiGraph3"]
position = Vector2(706, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Window/SekkeiGraph3/DragPath"]
libraries = {
"": SubResource("AnimationLibrary_jn6kl")
}
